needs to show all the models we persisted in the database

--- a/backend/datamining-mlp/src/main/resources/application.properties
+++ b/backend/datamining-mlp/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=datamining-mlp
+
+
+spring.data.mongodb.uri=mongodb://localhost:27017/spam_classifier
+spring.data.mongodb.database=spam_classifier
