--- a/backend/datamining-mlp/src/main/resources/application.properties
+++ b/backend/datamining-mlp/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=datamining-mlp
-
+# Définit le nom de l'application Spring Boot
 
 spring.data.mongodb.uri=mongodb://localhost:27017/spam_classifier
+# URL de connexion à la base de données MongoDB locale sur le port 27017, utilisant la base "spam_classifier"
+
 spring.data.mongodb.database=spam_classifier
+# Nom explicite de la base de données MongoDB à utiliser
