--- a/backend/datamining-mlp/pom.xml
+++ b/backend/datamining-mlp/pom.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  Ce fichier définit la configuration du projet Maven :
+  - Les dépendances nécessaires,
+  - Les paramètres de construction,
+  - Les informations sur le projet (version, nom, etc.),
+  - Les plugins et leur configuration.
+  C'est un fichier clé pour gérer la compilation et le packaging du projet.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
